--- a/ChessTournaments/View/OrganizerDashboard.xaml
+++ b/ChessTournaments/View/OrganizerDashboard.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ChessTournaments.View.OrganizerDashboard"
+﻿<Window x:Class="ChessTournaments.View.OrganizerDashboard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -180,4 +180,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</UserControl>
+</Window>
