--- a/ChessTournaments/View/PlayerDashboard.xaml
+++ b/ChessTournaments/View/PlayerDashboard.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ChessTournaments.View.PlayerDashboard"
+﻿<Window x:Class="ChessTournaments.View.PlayerDashboard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -65,4 +65,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</UserControl>
+</Window>
