--- a/ChessTournaments/View/OrganizerDashboard.xaml
+++ b/ChessTournaments/View/OrganizerDashboard.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ChessTournaments.View"
+             xmlns:vm="clr-namespace:ChessTournaments.ViewModel"     
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="900">
+
     <Grid>
         <TabControl >
             <TabItem x:Name="turnieje" Header="Turnieje">
@@ -18,14 +20,14 @@
                     </Grid.ColumnDefinitions>
 
                     <local:TournamentList Grid.Column="0" >
-
+                        
                     </local:TournamentList>
 
                     <!--regulamin-->
                     <Grid Background="#fff" Grid.Column="1" >
-                        <TextBlock HorizontalAlignment="Center" >Regulamin</TextBlock>
+                        <TextBlock HorizontalAlignment="Center">Regulamin</TextBlock>
                         <TextBlock TextWrapping="WrapWithOverflow" Padding="10" Text="{Binding regulamin }"></TextBlock>
-
+                        
                     </Grid>
                 </Grid>
 
