--- a/ChessTournaments/View/PlayerDashboard.xaml
+++ b/ChessTournaments/View/PlayerDashboard.xaml
@@ -5,9 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:ChessTournaments.View"
+             xmlns:vm="clr-namespace:ChessTournaments.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="900">
-
+    
+    
     <Grid>
 
         <TabControl >
